--- a/index.html
+++ b/index.html
@@ -1,1 +1,21 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>How much do you love me?</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <div class="container">
+        <h1>How much do you love me?</h1>
+        <div class="slider-container">
+            <input type="range" min="1" max="5" value="3" class="slider" id="loveSlider">
+        </div>
+        <div class="gif-container">
+            <img src="assets/gifs/gif3.gif" id="loveGif" alt="Love Gif">
+        </div>
+    </div>
+    <script src="script.js"></script>
+</body>
+</html>
